--- a/platformio.ini
+++ b/platformio.ini
@@ -14,3 +14,5 @@ board = genericSTM32F407VET6
 framework = stm32cube
 upload_protocol = dfu
 build_flags = -D HSE_VALUE=8000000
+extra_scripts = post:extra_artifacts.py
+
