--- a/platformio.ini
+++ b/platformio.ini
@@ -1,18 +1,22 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
+; -------- PlatformIO multi-env: STM32F407 (HAL) + ESP32 (Arduino) --------
 
+[platformio]
+default_envs = black_f407vet6
+
+; ==================== STM32F407 (HAL / CubeMX) ====================
 [env:black_f407vet6]
-platform = ststm32
-board = genericSTM32F407VET6
+platform  = ststm32
+board     = black_f407ve       
 framework = stm32cube
-upload_protocol = dfu
-build_flags = -D HSE_VALUE=8000000
-extra_scripts = post:extra_artifacts.py
+src_dir   = src/stm32          
 
+monitor_speed = 115200
+
+; ==================== ESP32 (Arduino) ====================
+[env:esp32dev]
+platform  = espressif32
+board     = esp32dev          
+framework = arduino
+src_dir   = src/esp32          
+monitor_speed = 115200
+monitor_filters = time
