--- a/platformio.ini
+++ b/platformio.ini
@@ -20,3 +20,6 @@ framework = arduino
 src_dir   = src/esp32          
 monitor_speed = 115200
 monitor_filters = time
+
+lib_deps =
+  knolleary/PubSubClient @ ^2.8
